--- a/MY_BAI_project.ipynb
+++ b/MY_BAI_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO22epOeemBhMlMnJkQluy5",
+      "authorship_tag": "ABX9TyPD6VF9Ld3cB3uVhPhrxAqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1320,24 +1320,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(clf.best_params_)\n",
-        "print(clf.best_score_)"
+        "print(f' Best Hyperparameter for MLP = {clf.best_params_}')\n",
+        "print(f' Highest Accuracy = {clf.best_score_}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zOx1P419n1Bk",
-        "outputId": "142f6eee-0435-4634-8021-ea988be4d208"
+        "outputId": "dae6bf09-e491-403a-f8c6-6f046e1a1573"
       },
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'activation': 'relu', 'alpha': 0.1, 'hidden_layer_sizes': (64, 32, 6), 'solver': 'sgd'}\n",
-            "0.9888888888888889\n"
+            " Best Hyperparameter for MLP = {'activation': 'relu', 'alpha': 0.1, 'hidden_layer_sizes': (64, 32, 6), 'solver': 'sgd'}\n",
+            " Highest Accuracy = 0.9888888888888889\n"
           ]
         }
       ]
@@ -6873,6 +6873,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Using the new best hyperparameter, I'll run KANs"
+      ],
+      "metadata": {
+        "id": "qxyTA8P7GkxA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "woCPdyoGGg5I"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
